examples/issues/issue_1250/expected/apps_v1_ingress_my-ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: CNAME.DOMAIN.COM
    http:
      paths:
      - backend:
          serviceName: service
          servicePort: 80
        path: /
