examples/issues/issue_1250/expected/~g_v1_service_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
